5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1593_1803.log
== TEST (2019-03-26 10:28:40) 
-- CODE:
digito = int(input())
d4 = digito//1000
d3 = (digito%1000)//100
d2 = (digito%100)//10
d1 = digito%10
print(d4,d3,d2,d1)

-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:12) 
-- CODE:
digito = int(input())
d4 = digito//1000
d3 = (digito%1000)//100
d2 = (digito%100)//10
d1 = digito%10
dgt_ver = (5*d4 + 4*d3 + 3*d2 + 2*d1)%11
print(digito_ver)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(digito_ver)
NameError: name 'digito_ver' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:26) 
-- CODE:
digito = int(input())
d4 = digito//1000
d3 = (digito%1000)//100
d2 = (digito%100)//10
d1 = digito%10
dgt_ver = (5*d4 + 4*d3 + 3*d2 + 2*d1)%11
print(dgt_ver)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:30:32) 
-- CODE:
digito = int(input())
d4 = digito//1000
d3 = (digito%1000)//100
d2 = (digito%100)//10
d1 = digito%10
dgt_ver = (5*d4 + 4*d3 + 3*d2 + 2*d1)%11
print(dgt_ver)

-- EXECUTION TIME:
0.131503
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
